# Kokoromi

./: .gitignore  README.md  main.py  makeuser.py  pyproject.toml
src/: meta.py
src/admin/: __init__.py  admin.py  articles.py  author.py  login.py  oobe.py  settings.py
src/custom/: __init__.py  preconnect.py  staticfiles.py
src/extensions/: README.md  autoref.py  luminous.py
static/: article.css  dashboard.css  scripts.js  style.css  styles.css
templates/: 404.html  article.html  articles.html  author.html  base.html  comment.html  load_fail.html
templates/admin/: about.html  articles.html  authors.html  base.html  dashboard.html  editor.html  login.html  oobe.html  settings.html
